Issue #5334: array.fromfile() failed to insert values when EOFError was raised. Reviewed by Benjamin Peterson.